--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
              alt="layout-b-large"
              aria-label="layout b"
            />             
-           <a href="layout-b.html" class="cta">
-            aller sur la page
+           <a href="layout-b-flex.html" class="cta">
+            Flex version
+          </a>
+           <a href="layout-b-grid.html" class="cta">
+            Grid version
           </a>
          </div>
        </div>    
