--- a/layout-a.html
+++ b/layout-a.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Layout A -  Flex</title>
+ <link rel="stylesheet" href="./assets/css/main.css">
+ <link rel="stylesheet" href="./assets/css/_layout-a.css">
+</head>
+<body>
+ 
+ <div class="container-layout-a">
+  <main>Main</main>
+  <aside>Aside</aside>
+ </div> 
+</body>
+</html>
