--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container-list">
       <h1>Layouts collection</h1>
       <main>
         <div class="card">
