--- a/layout-b-flex.html
+++ b/layout-b-flex.html
@@ -4,6 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Layout B - FLEXBOX</title>
+ <link rel="stylesheet" href="./assets/css/main.css">
  <link rel="stylesheet" href="./assets/css/_layout-b-flex.css">
 </head>
 <body>
